# AimRT_demo

./: CMakeLists.txt  README.md
cmake/: GetAimRT.cmake
src/: CMakeLists.txt
src/app/helloworld_app/: CMakeLists.txt  main.cc
src/install/cfg/: helloworld_cfg.yaml
src/module/helloworld_module/: CMakeLists.txt  helloworld_module.cc  helloworld_module.h
